<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_more_color"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_left_27dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_56dp"
            android:gravity="center|right"
            android:paddingRight="@dimen/padding_right_24dp">

            <ImageView
                android:id="@+id/img_close"
                android:layout_width="@dimen/width_20dp"
                android:layout_height="@dimen/height_20dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ico_close" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_86dp" />

        <TextView
            android:id="@+id/txt_my_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            android:textColor="@color/White"
            android:textSize="@dimen/txt_sign_out_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_30dp" />

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textColor="@color/White"
            android:textSize="@dimen/txt_sign_out_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_30dp" />

        <TextView
            android:id="@+id/term_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_condition"
            android:textColor="@color/White"
            android:textSize="@dimen/txt_sign_out_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_30dp" />

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_apps"
            android:textColor="@color/White"
            android:textSize="@dimen/txt_sign_out_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_30dp" />


        <TextView
            android:id="@+id/txt_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textColor="@color/White"
            android:textSize="@dimen/txt_sign_out_size" />
    </LinearLayout>
</LinearLayout>