<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayoutView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewEmpty"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/icon_null" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/empty_screen"
        android:textColor="@color/black" />

    <net.winnerawan.wonderfood.ui.helper.LatoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/please_retry"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_retry"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/retry"
        android:textSize="20sp" />
</LinearLayout>