<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragments"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/lyt_search"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_56dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_left_22dp"
            android:paddingRight="@dimen/padding_right_22dp">

            <ImageView
                android:id="@+id/img_search"
                android:layout_width="@dimen/width_24dp"
                android:layout_height="@dimen/height_24dp"
                android:src="@mipmap/ico_search" />

            <EditText
                android:id="@+id/txt_search"
                android:layout_width="@dimen/nol_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@null"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:paddingLeft="@dimen/padding_left_20dp"
                android:singleLine="true"
                android:textColor="@color/txt_search_color"
                android:textColorHint="@color/txt_search_color"
                android:textSize="@dimen/txt_search_size" />

            <ImageView
                android:id="@+id/img_close"
                android:layout_width="@dimen/width_24dp"
                android:layout_height="@dimen/height_24dp"
                android:src="@mipmap/ico_close" />
        </LinearLayout>

    <LinearLayout
        android:layout_below="@id/lyt_search"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/light_blue"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:gravity="center">

                <net.winnerawan.wonderfood.ui.helper.LatoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/action_place_order"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/light_blue_green"
            android:clickable="true"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:gravity="center">

                <net.winnerawan.wonderfood.ui.helper.LatoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/action_delivery_order"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/moss_green"
            android:clickable="true"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:gravity="center">

                <net.winnerawan.wonderfood.ui.helper.LatoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/action_book_table"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/light_moss_green"
            android:clickable="true"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:gravity="center">

                <net.winnerawan.wonderfood.ui.helper.LatoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/action_birthday_plan"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </RelativeLayout>

</FrameLayout>
