<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/height_54dp"
    android:layout_alignParentTop="true"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:elevation="5dp"
    app:contentInsetEnd="@dimen/nol_dp"
    app:contentInsetLeft="@dimen/nol_dp"
    app:contentInsetRight="@dimen/nol_dp"
    app:contentInsetStart="@dimen/nol_dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5.0">

        <FrameLayout
            android:id="@+id/f_btn_home"
            android:layout_width="@dimen/nol_dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="?selectableItemBackground"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/btn_home"
                    android:layout_width="@dimen/width_24dp"
                    android:layout_height="@dimen/height_24dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_home_active" />

                <net.winnerawan.wonderfood.ui.helper.LatoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="8sp"
                    android:gravity="center_horizontal"
                    android:text="@string/home" />
            </LinearLayout>


        </FrameLayout>

        <FrameLayout
            android:id="@+id/f_btn_history"
            android:layout_width="@dimen/nol_dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="?selectableItemBackground"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent">

            <ImageView
                android:id="@+id/btn_history"
                android:padding="1dp"
                android:layout_width="@dimen/width_24dp"
                android:layout_height="@dimen/height_24dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/ic_clock" />

                <net.winnerawan.wonderfood.ui.helper.LatoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="8sp"
                    android:gravity="center_horizontal"
                    android:text="@string/history" />

            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/f_btn_help"
            android:layout_width="@dimen/nol_dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="?selectableItemBackground"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent">

            <ImageView
                android:padding="2dp"
                android:id="@+id/btn_help"
                android:layout_width="@dimen/width_24dp"
                android:layout_height="@dimen/height_24dp"
                android:layout_gravity="center"
                android:background="@null"
                android:scaleType="centerInside"
                android:src="@drawable/ic_live_help" />

                <net.winnerawan.wonderfood.ui.helper.LatoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="8sp"
                    android:gravity="center_horizontal"
                    android:text="@string/help" />

            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/f_btn_search"
            android:layout_width="@dimen/nol_dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="?selectableItemBackground"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent">

            <ImageView
                android:id="@+id/btn_search"
                android:layout_width="@dimen/width_24dp"
                android:layout_height="@dimen/height_24dp"
                android:layout_gravity="center"
                android:padding="3dp"
                android:background="@null"
                android:scaleType="centerInside"
                android:src="@mipmap/ico_search" />

            <net.winnerawan.wonderfood.ui.helper.LatoTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="8sp"
                android:gravity="center_horizontal"
                android:text="@string/search" />

            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/f_btn_more"
            android:layout_width="@dimen/nol_dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="?selectableItemBackground"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent">

            <ImageView
                android:id="@+id/btn_more"
                android:layout_width="@dimen/width_24dp"
                android:layout_height="@dimen/height_24dp"
                android:layout_gravity="center"
                android:background="@null"
                android:scaleType="centerInside"
                android:src="@drawable/ic_more" />

            <net.winnerawan.wonderfood.ui.helper.LatoTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="8sp"
                android:gravity="center_horizontal"
                android:text="@string/more" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</android.support.v7.widget.Toolbar>